# routes/api.php
@@ -112,3 +112,10 @@ Route::get('/search', 'Api\SearchController@search');
 
 //entertainment
 Route::get('/entertainment', 'Api\EntertainmentController@index');
+
+//user
+Route::post('/user/auth/check-phone-number', 'Api\UserController@check_phone_number');
+Route::post('/user/auth/verify-otp', 'Api\UserController@verify_otp');
+Route::post('/user/auth/request-otp', 'Api\UserController@request_otp');
+Route::post('/user/auth/login', 'Api\UserController@login');
+Route::post('/user/auth/register', 'Api\UserController@register');
